--- a/src/main/resources/static/blog/amaze/css/base.css
+++ b/src/main/resources/static/blog/amaze/css/base.css
@@ -2941,7 +2941,7 @@
    }
 
 .sidebar-header .focus {
-    color: seagreen !important;
+    color: #29bb9c !important;
 }
 
 .sidebar-header .sidebar-header-title {
