--- a/src/main/resources/templates/blog/amaze/footer.html
+++ b/src/main/resources/templates/blog/amaze/footer.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <footer class="footer blog-footer" th:fragment="footer-fragment">
     <div class="blog-text-center">
-        <a>Copyright &copy; 2019-2020 by Minhol</a>
+        <a>Copyright &copy; 2019-2020 by Minhol. </a>&nbsp;
+        <a>All rights reserved.</a>
     </div>
 </footer>
 </html>
