--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -40,6 +40,13 @@
                                                placeholder="站点描述">
                                     </div>
                                     <div class="form-group">
+                                        <label>站点标题</label>
+                                        <input type="text" class="form-control" id="websiteSubhead"
+                                               name="websiteSubhead"
+                                               th:value="${configurations.get('websiteSubhead')}"
+                                               placeholder="站点标题">
+                                    </div>
+                                    <div class="form-group">
                                         <label>站点Logo</label>
                                         <input type="text" class="form-control" id="websiteLogo"
                                                name="websiteLogo" th:value="${configurations.get('websiteLogo')}"
@@ -89,56 +96,6 @@
                                     </div>
                                     <div class="card-footer">
                                         <button type="button" id="updateUserInfoButton" onsubmit="return false;"
-                                                class="btn btn-danger float-right">确认修改
-                                        </button>
-                                    </div>
-                                </form>
-                            </div><!-- /.card-body -->
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card card-primary card-outline">
-                            <div class="card-header">
-                                <h3 class="card-title">底部设置</h3>
-                            </div> <!-- /.card-body -->
-                            <div class="card-body">
-                                <form role="form" id="footerForm">
-                                    <!-- input states -->
-                                    <div class="form-group">
-                                        <label class="control-label">底部About</label>
-                                        <input type="text" class="form-control" id="footerAbout"
-                                               name="footerAbout" th:value="${configurations.get('footerAbout')}"
-                                               placeholder="About">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label">底部备案号</label>
-                                        <input type="text" class="form-control" id="footerICP" name="footerICP"
-                                               th:value="${configurations.get('footerICP')}"
-                                               placeholder="备案号">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label">底部Copy Right</label>
-                                        <input type="text" class="form-control" id="footerCopyRight"
-                                               name="footerCopyRight"
-                                               th:value="${configurations.get('footerCopyRight')}"
-                                               placeholder="Copy Right">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label">底部Powered By</label>
-                                        <input type="text" class="form-control" id="footerPoweredBy"
-                                               name="footerPoweredBy"
-                                               th:value="${configurations.get('footerPoweredBy')}"
-                                               placeholder="Powered By">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label">底部Powered By URL</label>
-                                        <input type="text" class="form-control" id="footerPoweredByURL"
-                                               name="footerPoweredByURL"
-                                               th:value="${configurations.get('footerPoweredByURL')}"
-                                               placeholder="Powered By URL">
-                                    </div>
-                                    <div class="card-footer">
-                                        <button type="button" id="updateFooterButton" onsubmit="return false;"
                                                 class="btn btn-danger float-right">确认修改
                                         </button>
                                     </div>
