--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -43,7 +43,7 @@
                                 <input type="text" class="form-control col-sm-6" id="blogSubUrl"
                                        name="blogSubUrl"
                                        th:value="${blog!=null and blog.blogSubUrl!=null }?${blog.blogSubUrl}: ''"
-                                       placeholder="请输入自定义路径,如:springboot-mybatis,默认为id"> &nbsp;&nbsp;
+                                       placeholder="访问路径"> &nbsp;&nbsp;
                                 <select class="form-control select2" style="width: 100%;" id="blogCategoryId"
                                         data-placeholder="请选择分类...">
                                     <th:block th:if="${null == categories}">
@@ -92,26 +92,25 @@
                             <form onsubmit="return false;">
                                 <div class="form-group">
                                     <div class="col-sm-4">
-                                        <th:block th:if="${null == blog}">
-                                            <img id="blogCoverImage" src="/admin/dist/img/img-upload.png"
+                                        <th:block th:if="${null == blog or  null == blog.blogCoverImage}">
+                                            <img id="blogCoverImage"
                                                  style="height: 64px;width: 64px;">
                                         </th:block>
-                                        <th:block th:unless="${null == blog}">
+                                        <th:block th:unless="${null == blog or  null == blog.blogCoverImage}">
                                             <img id="blogCoverImage" th:src="${blog.blogCoverImage}"
                                                  style="width:160px ;height: 120px;display:block;">
                                         </th:block>
                                     </div>
                                 </div>
-                                <br>
                                 <div class="form-group">
                                     <div class="col-sm-4">
                                         <button class="btn btn-info" style="margin-bottom: 5px;" id="uploadCoverImage">
                                             <i class="fa fa-picture-o"></i>&nbsp;上传封面
                                         </button>
-                                        <button class="btn btn-secondary" style="margin-bottom: 5px;"
-                                                id="randomCoverImage"><i
-                                                class="fa fa-random"></i>&nbsp;随机封面
-                                        </button>
+                                        <!--<button class="btn btn-secondary" style="margin-bottom: 5px;"-->
+                                                <!--id="randomCoverImage"><i-->
+                                                <!--class="fa fa-random"></i>&nbsp;随机封面-->
+                                        <!--</button>-->
                                     </div>
                                 </div>
                                 <div class="form-group">
