--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <footer class="main-footer" th:fragment="footer-fragment">
-    <strong>Copyright &copy; 2018 <a href="##">13blog.site</a>.</strong>
+    <strong>Copyright &copy; 2019-2020 by Minhol.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
-        <b>my personal blog #Version</b> 1.0
+        <b>Technique Blog #Version</b> 1.0
     </div>
 </footer>
 </html>
