--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -30,10 +30,10 @@
                                     </div>
                                     <!-- text input -->
                                     <div class="form-group">
-                                        <label>登陆名称</label>
+                                        <label>登录账号</label>
                                         <input type="text" class="form-control" id="loginUserName"
                                                name="loginUserName"
-                                               placeholder="请输入登陆名称" required="true" th:value="${loginUserName}">
+                                               placeholder="请输入登录账号" required="true" th:value="${loginUserName}">
                                     </div>
                                     <div class="form-group">
                                         <label>昵称</label>
