--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -5,14 +5,14 @@
     <a th:href="@{/admin/index}" class="brand-link">
         <img th:src="@{/admin/dist/img/logo.png}" alt="ssm-cluster Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">my blog</span>
+        <span class="brand-text font-weight-light">Technique Blog</span>
     </a>
     <!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img th:src="@{/admin/dist/img/avatar5.png}" class="img-circle elevation-2" alt="User Image">
+                <img th:src="@{/admin/dist/img/avatar/avatar1.jpg}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a href="#" class="d-block" th:text="${session.loginUser}"></a>
@@ -24,12 +24,12 @@
                 data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
                      with font-awesome or any other icon font library -->
-                <li class="nav-header">Dashboard</li>
+                <li class="nav-header">仪表盘</li>
                 <li class="nav-item">
                     <a th:href="@{/admin/index}" th:class="${path}=='index'?'nav-link active':'nav-link'">
                         <i class="nav-icon fa fa-dashboard"></i>
                         <p>
-                            Dashboard
+                            仪表盘
                         </p>
                     </a>
                 </li>
@@ -71,14 +71,6 @@
                         <i class="fa fa-tags nav-icon" aria-hidden="true"></i>
                         <p>
                             标签管理
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/admin/links}" th:class="${path}=='links'?'nav-link active':'nav-link'">
-                        <i class="fa fa-heart nav-icon" aria-hidden="true"></i>
-                        <p>
-                            友情链接
                         </p>
                     </a>
                 </li>
