--- a/src/main/resources/static/blog/amaze/css/base.css
+++ b/src/main/resources/static/blog/amaze/css/base.css
@@ -3504,7 +3504,7 @@
  }
 
 .tag-box{
-    margin-right:10px;
+    margin:0 10px 10px 0;
     background-color: #f5f5f5;
     padding:2px 5px;
     color:grey;
